improved dark mode & fixes

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body, #mainModuleContainer, #generatorModuleContainer, button, #chord1, #chord2,
     color: var(--color);
 }
 
-#midiClockContainer, #midiOutContainer, #inputBarsContainer, #outputBarsContainer, #clickContainer, #buttonDiv, #generatorButtonDiv, #mainModuleContainer, #generatorModuleContainer, #chord1, #chord2, #chord3, #chord4, button { 
+#midiClockContainer, #midiOutContainer, #midiInContainer, #inputBarsContainer, #outputBarsContainer, #clickContainer, #buttonDiv, #generatorButtonDiv, #mainModuleContainer, #generatorModuleContainer, #chord1, #chord2, #chord3, #chord4, button { 
     border: 2px solid var(--borderColor);
 }
 
@@ -109,7 +109,7 @@ button {
     font-weight: bold;
 }
 
-#play, #generate, #buttonAdd, #buttonStop, #buttonPlayAll, #loop, #listen {
+#play, #generate, #buttonAdd, #buttonStop, #buttonPlayAll, #loop, #listen, #buttonChange {
     font-size: 1.5em;
     padding: 0.3em 1em;
     margin-top: 0.5em;
@@ -127,15 +127,15 @@ button {
     margin-bottom: 1em;
 }
 
-#midiClockContainer, #midiOutContainer { 
+#midiClockContainer, #midiOutContainer, #midiInContainer { 
     padding-top: 0.5em;
 }
 
-#midiText, #midiClockText {
+#midiText, #midiInText, #midiClockText {
     font-size: 0.9em;
 }
 
-#midiClockContainer, #midiOutContainer { 
+#midiClockContainer, #midiOutContainer, #midiInContainer { 
     height: 3em;
     display: inline-block;
 }
@@ -172,14 +172,14 @@ select {
 
 #buttonDiv, #generatorButtonDiv {
     position: absolute;
-    left: -0.1em;
+    left: -0.11em;
     bottom: -0.1em;
-    width: 21.05em;
+    width: 21.03em;
     text-align: center;
 }
 
 #buttonDiv {
-    left: -0.15em;
+    left: -0.13em;
 }
 
 #generatorButtonDiv {
